・プライバシーポリシーページの創設 ・各ボタンサイズなど見栄えの調整

--- a/src/app/views/exercises/ask_chengyu.html.erb
+++ b/src/app/views/exercises/ask_chengyu.html.erb
@@ -1,17 +1,14 @@
-[問題ID]<%= @question.id %><br />
-[意味]<%= safe_join(@question.mean.split("\n"),tag(:br)) %>
-<br />
-<br />
-[文字をタップして、成語を作成してください(文字は重複する可能性があります)]
-<div class="notosans">
+[問題]<br />
+<span class="lead"><%= safe_join(@question.mean.split("\n"),tag(:br)) %></span><br />
+<span class="notosans">
   <% @choices.each_with_index do |c, i| %>
-    <button type="button" class="btn btn-primary btn-lg" id="answer<%= i %>" onclick="InputAnswerText('<%= c %>');">
+    <button type="button" class="btn btn-primary btn-lg m-1" id="answer<%= i %>" onclick="InputAnswerText('<%= c %>');">
       <%= c %>
     </button>
+    <% if i == 4 %><br /><% end %>
   <% end %>
-</div>
-
-<button type="button" class="btn btn-warning btn-lg" onclick="DeleteAnswerText();">一字削除</button>
+</span>
+<br />
 
 <%= form_with(url: exercises_judgement_chengyu_path, local: true) do |f| %>
   <input type="hidden" name="question_id" value="<%= @question.id %>" />
@@ -20,11 +17,18 @@
   <input type="hidden" name="use_letter_kind" value="<%= @use_letter_kind %>" />
   
   <div class="form-group">
-    <label for="answer">４文字で答えを入力してください</label>
+    <label for="answer">[回答]</label>
     <input type=”text” class="form-control" name="input_answer" id="input_answer" value="<%= @input_answer %>" readonly>
+    <button type="button" class="btn btn-warning" onclick="DeleteAnswerText();">一字削除</button>
   </div>
+  <br />
   <button type="submit" class="btn btn-primary">回答する</button>
 <% end %>
+
+<hr />
+[問題ID] <%= @question.id %><br />
+※文字ボタンをタップして、成語を作成してください(文字は重複する可能性があります)<br />
+※４文字で答えを入力してください
 
 <script>
   function InputAnswerText(str){
