--- a/src/app/views/settings/edit.html.erb
+++ b/src/app/views/settings/edit.html.erb
@@ -80,4 +80,4 @@
 
 <br />
 <%= link_to 'メールアドレス・パスワード変更・アカウント削除', edit_user_registration_path, class: 'btn btn-secondary' %><br />
-<%= link_to "Topへ戻る", root_path, class: "btn btn-light btn-lg" %>
+<%= link_to "Topへ戻る", root_path, class: "btn btn-info m-1" %>
