--- a/src/app/views/shared/_navigate_button_except_question.html.erb
+++ b/src/app/views/shared/_navigate_button_except_question.html.erb
@@ -1,2 +1,2 @@
-<%= link_to "戻る", 'javascript:history.back()', class: "btn btn-primary btn-lg" %>
-<%= link_to "Topへ戻る", root_path, class: "btn btn-light btn-lg" %>
+<%= link_to "戻る", 'javascript:history.back()', class: "btn btn-primary m-1" %>
+<%= link_to "Topへ戻る", root_path, class: "btn btn-info m-1" %>
