--- a/src/app/views/devise/registrations/new.html.erb
+++ b/src/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,8 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= bootstrap_devise_error_messages! %>
+  <%= link_to "プライバシーポリシーを必ずご確認ください", privacy_policy_path, target: :_blank, rel: "noopener noreferrer" %>
+  (別タブで開きます)<br />
 
   <div class="form-group">
     <%= f.label :email %>
