--- a/src/app/views/shared/_test_format_change.html.erb
+++ b/src/app/views/shared/_test_format_change.html.erb
@@ -11,5 +11,6 @@
       →お気に入り問題から出題する<br />
   <% end %>
 <% else %>
-  →アカウントを作りログインすると回答記録が保存され、間違った問題を復習できるようになります。<br />
+  →全ての問題から出題する<br />
+  (アカウントを作りログインすると回答記録が保存され、間違った問題を復習できるようになります)<br />
 <% end %>
