googleアナリティクスを導入

--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
 
     <%= render 'shared/notosans' %>
 
+    <% if Rails.env.production? %>
+      <%= render 'layouts/google_analytics' %>
+    <% end %>
   </head>
 
   <header>
