routesを一部修正(重複していたものを整理)

--- a/src/app/views/bookmarks/index.html.erb
+++ b/src/app/views/bookmarks/index.html.erb
@@ -32,7 +32,7 @@
         <td><%= question.id %></td>
         <td>
           <span class="notosans">
-            <%= link_to(question.chengyu_lang_setting(Setting.letter_kinds[current_user.setting.letter_kind]), question_show_path(question.id)) %>
+            <%= link_to(question.chengyu_lang_setting(Setting.letter_kinds[current_user.setting.letter_kind]), question_path(question.id)) %>
           </span>
         </td>
         <td><%= question.pinyin %></td>
