--- a/src/app/views/questions/index.html.erb
+++ b/src/app/views/questions/index.html.erb
@@ -18,27 +18,22 @@
     <div class="col-md-4">
 
       <%= search_form_for @search_data, url: questions_path do |s| %>
-        <div class="row align-items-center">
-        <div class="col-md-9 g-0">
-        <% if user_signed_in? && Setting.letter_kinds[current_user.setting.letter_kind] == Constants.letter_kind.fantizi %>
-          <%= s.search_field :chengyu_fanti_cont, class: "form-control", placeholder: "成語(繁體字)を入力", list: 'list-name' %>
-        <% else %>
-          <%= s.search_field :chengyu_jianti_cont, class: "form-control", placeholder: "成語(簡体字)を入力", list: 'list-name' %>
-        <% end %>
-
-        <datalist id="list-name">
-          <% @question_all.each do |quest| %>
-            <% if user_signed_in? && Setting.letter_kinds[current_user.setting.letter_kind] == Constants.letter_kind.fantizi %>
-              <option value="<%= quest.chengyu_fanti %>">
-            <% else %>
-              <option value="<%= quest.chengyu_jianti %>">
-          <% end %>
-          <% end %>
-        </datalist>
-
-        </div>
-        <div class="col-md-3 g-0">
-          <%= s.submit "検索", class: 'btn btn-primary text-right' %>
+        <div class="row align-items-center g-0">
+          <div data-controller="autocomplete" data-autocomplete-url-value="/questions/search" role="combobox">
+            <div class="col-9">
+              <% if user_signed_in? && Setting.letter_kinds[current_user.setting.letter_kind] == Constants.letter_kind.fantizi %>
+                <%= s.search_field :chengyu_fanti_cont, class: "form-control", placeholder: "成語(繁體字)を入力", data: { autocomplete_target: 'input' } %>
+                <%= s.hidden_field :chengyu_fanti, data: { autocomplete_target: 'hidden' } %>
+              <% else %>
+                <%= s.search_field :chengyu_jianti_cont, class: "form-control", placeholder: "成語(簡体字)を入力", data: { autocomplete_target: 'input' } %>
+                <%= s.hidden_field :chengyu_jianti, data: { autocomplete_target: 'hidden' } %>
+              <% end %>
+              <ul class="list-group" style="z-index: 3; position:relative; overflow:auto; width: 100%; max-height: 200px;" data-autocomplete-target="results"></ul>
+              </div>
+            <div class="col-3">
+              <%= s.submit "検索", class: 'btn btn-primary text-right' %>
+            </div>
+          </div>
         </div>
       <% end %>
 
