bootstrapのカラーデザインを大幅に見直し

--- a/src/app/assets/stylesheets/application.bootstrap.scss
+++ b/src/app/assets/stylesheets/application.bootstrap.scss
@@ -1,2 +1,6 @@
+// カスタマイズ用
+@import './custom.scss';
+
+// デフォルト
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
