--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   </head>
 
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
       <div class="container-fluid">
         <%= link_to 'ChengYu-Test', root_path, class: 'navbar-brand' %>
 
