--- a/src/app/views/shared/_flash_message.html.erb
+++ b/src/app/views/shared/_flash_message.html.erb
@@ -1,6 +1,23 @@
+<%# 成功系 %>
+
 <% if flash[:success] %>
   <div class="alert alert-success alert-dismissible fade show" role="alert">
     <%= flash[:success] %>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+<% end %>
+<% if flash[:notice] %>
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <%= flash[:notice] %>
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+<% end %>
+
+<%# 失敗系 %>
+
+<% if flash[:alert] %>
+  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <%= flash[:alert] %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 <% end %>
@@ -10,9 +27,4 @@
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 <% end %>
-<% if flash[:notice] %>
-  <div class="alert alert-primary alert-dismissible fade show" role="alert">
-    <%= flash[:notice] %>
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-  </div>
-<% end %>
+
