--- a/src/app/views/shared/_favorite_button.html.erb
+++ b/src/app/views/shared/_favorite_button.html.erb
@@ -8,7 +8,7 @@
     <% if current_user.known?(question) %>
       <%= link_to '★既知リストから外す', question_bookmark_path(question_id: question.id, flg: Constants.bookmark_flg.known), { data: { "turbo-method": :delete }, class: "btn btn-secondary btn-sm" } %> 
     <% else %>
-      <%= link_to '☆既知リストに入れる', question_bookmark_path(question_id: question.id, flg: Constants.bookmark_flg.known), { data: { "turbo-method": :post }, class: "btn btn-secondary btn-sm" } %> 
+      <%= link_to '☆既知リストに入れる', question_bookmark_path(question_id: question.id, flg: Constants.bookmark_flg.known), { data: { "turbo-method": :post }, class: "btn btn-light btn-sm" } %> 
     <% end %>
   <% else %>
   ※ログインするとお気に入り問題等が保存できます<br />
