・MVP向けRspecテストの作成 ・factory_botの追加

--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
   <header>
     <nav class="navbar navbar-expand-md bg-primary navbar-dark">
       <div class="container-fluid">
-        <%= link_to '成語テスト[プレリリース中]', root_path, class: 'navbar-brand' %>あ
+        <%= link_to '成語テスト[プレリリース中]', root_path, class: 'navbar-brand' %>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
