--- a/src/app/views/devise/registrations/edit.html.erb
+++ b/src/app/views/devise/registrations/edit.html.erb
@@ -37,7 +37,7 @@
   </div>
 <% end %>
 <br />
-<p><%= link_to t('.cancel_my_account'), registration_path(resource_name), \
+<%= link_to t('.cancel_my_account'), registration_path(resource_name), class: 'btn btn-secondary m-1', \
   data: { turbo_method: :delete, turbo_confirm: "本当にアカウントを削除しますか？\n保存されていたデータは全て利用できなくなります", \
-  cancel: 'やめる', commit: '削除する'}, title: '削除確認' %></p>
-<%= link_to t('.back'), :back %>
+  cancel: 'やめる', commit: '削除する'}, title: '削除確認' %><br />
+<%= link_to t('.back'), :back, class: "btn btn-info m-1" %>
