Rspec再修正(日本語表記に変更等)

--- a/src/app/views/static_pages/explain.html.erb
+++ b/src/app/views/static_pages/explain.html.erb
@@ -145,15 +145,15 @@
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9" aria-expanded="false" aria-controls="collapse1">
-        運営者のなっきゅ(NaQ)とは何者？
+        運営者のなっきゅ(NaQ)は誰？
       </button>
     </h2>
     <div id="collapse9" class="accordion-collapse collapse" data-bs-parent="#accordionExplain">
       <div class="accordion-body">
-        中国語学習者の日本人です。また、現在Railsなどのプログラムの学習もしています。<br />
-        中国語を学習している中で、初心者向けのサイトは非常に多くあるのにも関わらず、<br />
-        中上級者の肝となる成語が学べるサイトがあまりにも少ないと感じたため、今回このサイトをつくることにしました。
+        中国語の学習を続けている日本人です。また、現在Railsなどのプログラムの学習もしています。<br />
+        中国語学習サイトが、初心者向けのものは非常に多くあるのにも関わらず、中上級者の肝となる成語が学べるサイトがあまりにも少ないと感じたため、今回このサイトをつくることにしました。
       </div>
     </div>
   </div>
+  <%= link_to "Topへ戻る", root_path, class: "btn btn-info m-1" %>
 
