--- a/src/app/views/static_pages/index.html.erb
+++ b/src/app/views/static_pages/index.html.erb
@@ -18,7 +18,7 @@
     成語→意味<br />
     <%= render 'shared/ask_mean_button' %>
     <br />
-    意味→成語<br />
+    意味→成語(高難易度)<br />
     <%= render 'shared/ask_chengyu_button' %>
   </p>
   <% end %>
