ボタン文言修正(一部commit失敗したため再度UP)

--- a/src/app/views/static_pages/index.html.erb
+++ b/src/app/views/static_pages/index.html.erb
@@ -32,7 +32,7 @@
 <% if user_signed_in? %>
   <hr />
   <p class="text-center">
-    <%= link_to "成績を見る", profiles_path, class: "btn btn-primary m-1" %><br />
+    <%= link_to "成績・お気に入り・既知リストを見る", profiles_path, class: "btn btn-primary m-1" %><br />
   </p>
 <% end %>
 <hr>
