--- a/src/app/views/questions/index.html.erb
+++ b/src/app/views/questions/index.html.erb
@@ -57,7 +57,7 @@
   </thead>
   <tbody>
 
-    <% @question.each_with_index do |question, i| %>
+    <% @questions.each_with_index do |question, i| %>
 
       <tr>
         <td><%= question.id %></td>
@@ -95,5 +95,5 @@
 
   </tbody>
 </table>
-<%= paginate @question, theme: 'bootstrap-5', pagination_class: "justify-content-center" %><br />
+<%= paginate @questions, theme: 'bootstrap-5', pagination_class: "justify-content-center" %><br />
 <%= render 'shared/navigate_button_except_question' %>
