issue108「問題を解き続ける際の問題種別ミス」を修正

--- a/src/app/views/exercises/result_chengyu.html.erb
+++ b/src/app/views/exercises/result_chengyu.html.erb
@@ -15,7 +15,7 @@
 <%= render partial: "shared/favorite_button", locals: { question: @question }%>
 <hr />
 もう一度やってみる？<br />
-<%= render 'shared/ask_mean_button' %>
+<%= render 'shared/ask_chengyu_button' %>
 <br />
 <%= link_to "Topへ戻る", root_path, class: "btn btn-info m-1" %>
 <br />
